# xalwart.server

./: .bumpversion.cfg  .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml  ci.yml  release.yml  tests-clang-alpine-dev.yml  tests-clang-alpine-master.yml  tests-clang-alpine.yml  tests-clang-ubuntu-dev.yml  tests-clang-ubuntu-master.yml  tests-clang-ubuntu.yml  tests-clang.yml  tests-gcc-alpine-dev.yml  tests-gcc-alpine-master.yml  tests-gcc-alpine.yml  tests-gcc-ubuntu-dev.yml  tests-gcc-ubuntu-master.yml  tests-gcc-ubuntu.yml  tests-gcc.yml  tests.yml
docker/alpine/: Dockerfile  clang.Dockerfile  gcc.Dockerfile
example/: CMakeLists.txt  main.cpp  server.cpp  server.h
scripts/: commit_msg_to_version.sh  get_branch.sh  get_cxx_name_by_cc.sh  install_compiler_alpine.sh  install_gtest.sh
scripts/linux/: build.sh
src/: _def_.h  abc.h  base.cpp  base.h  context.cpp  context.h  exceptions.h  handler.cpp  handler.h  http_server.cpp  http_server.h  interfaces.h  parser.cpp  parser.h  parsers.cpp  parsers.h  request_context.cpp  request_context.h  selectors.cpp  selectors.h  server.cpp  server.h  server_context.cpp  server_context.h  sock.cpp  sock.h  socket.cpp  socket.h  tcp_server.cpp  tcp_server.h  util.cpp  util.h  utility.cpp  utility.h
src/handlers/: base.cpp  base.h  base_http_handler.cpp  base_http_handler.h  http_handler.cpp  http_handler.h
src/socket/: base.cpp  base.h  io.cpp  io.h  tcp.cpp  tcp.h  tcp6.cpp  tcp6.h  unix.cpp  unix.h
src/sockets/: base.cpp  base.h  io.cpp  io.h  tcp.cpp  tcp.h  tcp6.cpp  tcp6.h  unix.cpp  unix.h
tests/: CMakeLists.txt  main.cpp  tests_server.cpp
